@@ -2,6 +2,7 @@ unreleased
 * breaking change: ExtString.starts_with type updated to match stdlib (use labelled ~prefix)
 * breaking change: ExtString.ends_with type updated to match stdlib (use labelled ~suffix)
 * breaking change: ExtString.exists use labelled ~sub argument
+* add ExtString.empty
 
 1.7.9 (2022-08-05)
 * build with OCaml 5 (Kate)
